--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -62,10 +62,12 @@
           href: environment/uninstall-project-operations.md
     - name: Nieuwe functies
       items:
-        - name: Augustus 2022 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
-          href: whats-new/whats-new-aug-2022-resource-based.md
+        - name: September 2022 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
+          href: whats-new/whats-new-sept-2022-resource-based.md
         - name: Archiveren
           items:
+            - name: Augustus 2022 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
+              href: whats-new/whats-new-aug-2022-resource-based.md
             - name: Juli 2022 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
               href: whats-new/whats-new-july-2022-resource-based.md
             - name: Juni 2022 - Project Operations voor scenario's op basis van resources/niet-voorradige artikelen
@@ -668,10 +670,12 @@
           href: environment/security-model.md
     - name: Nieuwe functies
       items:
-        - name: Nieuw in augustus 2022 - lite-implementatie
-          href: pro/whats-new/whats-new-aug-2022-lite.md
+        - name: Nieuw in september 2022 - lite-implementatie
+          href: pro/whats-new/whats-new-sept-2022-lite.md
         - name: Archiveren
           items:
+            - name: Nieuw in augustus 2022 - lite-implementatie
+              href: pro/whats-new/whats-new-aug-2022-lite.md
             - name: Nieuw in juli 2022 - lite-implementatie
               href: pro/whats-new/whats-new-july-2022-lite.md
             - name: Nieuw in juni 2022 - lite-implementatie
@@ -1180,10 +1184,12 @@
               href: whats-new/ur5-nonstocked-installation.md
     - name: Nieuwe functies
       items:
-        - name: Nieuwe functies van juli 2022 - Project Operations voor scenario's op basis van voorradige artikelen/productieorders
-          href: prod-pma/whats-new/whats-new-jul-2022-stocked.md
+        - name: Nieuwe functies van september 2022 - Project Operations voor scenario's op basis van voorradige artikelen/productieorders
+          href: prod-pma/whats-new/whats-new-sept-2022-stocked.md
         - name: Archiveren
           items:
+            - name: Nieuwe functies van juli 2022 - Project Operations voor scenario's op basis van voorradige artikelen/productieorders
+              href: prod-pma/whats-new/whats-new-jul-2022-stocked.md
             - name: Nieuwe functies van juni 2022 - Project Operations voor scenario's op basis van voorradige artikelen/productieorders
               href: prod-pma/whats-new/whats-new-jun-2022-stocked.md
             - name: Nieuwe functies van oktober 2021 - Project Operations voor scenario's op basis van voorradige artikelen/productieorders
@@ -1436,6 +1442,10 @@
       items:
         - name: Updatereleaseschema voor Project Service 3.x
           href: psa/version-history-ps.md
+        - name: 'Nieuwe of gewijzigde functies in Update versie 47, V3'
+          href: psa/whats-new-ur-47.md
+        - name: 'Nieuwe of gewijzigde functies in Update versie 45, V3'
+          href: psa/whats-new-ur-45.md
         - name: 'Nieuwe of gewijzigde functies in Update versie 44, V3'
           href: psa/whats-new-ur-44.md
         - name: 'Nieuwe of gewijzigde functies in Update versie 43, V3'
